<resources>
    <string name="app_name" translatable="false">BarTracker</string>
    <string name="title_activity_main">Bar Tracker</string>
    <string name="title_activity_rep_analyzer">RepAnalyzerActivity</string>
    <string name="title_activity_debug" translatable="false">Debug</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_fragment_track">Track</string>
    <string name="title_fragment_history">History</string>
    <string name="title_fragment_stats">Stats</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="average_velocity">Average velocity: %1$f</string>
    <string name="max_velocity">Max velocity: %1$f</string>
    <string name="min_velocity">Min velocity: %1$f</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_debug">Debug</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="field_weight">%1$.2f kgs</string>
    <string name="field_duration">Duration: %1$d s</string>
    <string name="field_repetitions">%1$d reps</string>
    <string name="field_date">Date: %1$s</string>
    <string name="field_max_power">Max: %1$.2f W</string>
    <string name="field_avg_power">Average: %1$.2f W</string>
    <string name="field_max_velocity">Max: %1$.2f m/s</string>
    <string name="field_avg_velocity">Average: %1$.2f m/s</string>
    <string name="field_max_force">Max: %1$.2f N</string>
    <string name="field_avg_force">Average: %1$.2f N</string>
    <string name="listfield_date_time">%1$s %2$s</string>
    <string name="listfield_reps">%1$d reps</string>
    <string name="listfield_weight">%1$.2f kgs</string>
    <string name="velocity">Velocity</string>
    <string name="power">Power</string>
    <string name="force">Force</string>

</resources>
