<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.view_set.SetStatsFragment">

    <TextView
        android:id="@+id/velocity_header"
        android:padding="@dimen/header_text_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/velocity" />
    <TextView
        android:id="@+id/max_velocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stats_text_margin"
        android:text="@string/field_max_velocity" />
    <TextView
        android:id="@+id/avg_velocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stats_text_margin"
        android:text="@string/field_avg_velocity" />

    <TextView
        android:id="@+id/power_header"
        android:padding="@dimen/header_text_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/power" />
    <TextView
        android:id="@+id/max_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stats_text_margin"
        android:text="@string/field_max_power" />
    <TextView
        android:id="@+id/avg_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stats_text_margin"
        android:text="@string/field_avg_power" />

    <TextView
        android:id="@+id/force_header"
        android:padding="@dimen/header_text_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/force" />
    <TextView
        android:id="@+id/max_force"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stats_text_margin"
        android:text="@string/field_max_force" />
    <TextView
        android:id="@+id/avg_force"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stats_text_margin"
        android:text="@string/field_avg_force" />
</LinearLayout>
