<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".models.SensorFragment">


    <!--<TextView-->
    <!--android:id="@+id/section_label"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content" />-->

    <ToggleButton
        android:id="@+id/button_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false" />

    <TextView
        android:id="@+id/average_velocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_velocity" />

    <TextView
        android:id="@+id/max_velocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_velocity" />

    <TextView
        android:id="@+id/min_velocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_velocity"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/acceleration_chart"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/velocity_chart"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/power_chart"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/force_chart"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
